--- a/home.css
+++ b/home.css
@@ -5,6 +5,8 @@
 .navMenu {
   background-color: #333;
   overflow: hidden;
+  border-style: solid;
+  border-width:2px;
 }
 
 /* Style the links inside the navigation bar */
@@ -19,13 +21,13 @@
 
 /* Change the color of links on hover */
 .navMenu a:hover {
-  background-color: #ddd;
+  background-color: #fb9a5d;
   color: black;
 }
 
 /* Add a color to the active/current link */
 .navMenu a.active {
-  background-color: #4CAF50;
+  background-color: #b53334;
   color: white;
 }
 
@@ -85,7 +87,7 @@
     text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/4 etc) */
 .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -136,4 +138,13 @@
     to {
         opacity: 1
     }
+}
+
+div.transmission {
+    height: 450px;
+    background-color: #fb9a5d;
+    border-style: double;
+    border-width: 15px;
+    padding: 20px;
+    overflow: scroll;
 }
