--- a/us.css
+++ b/us.css
@@ -4,6 +4,8 @@
 .navMenu {
   background-color: #333;
   overflow: hidden;
+  border-style: solid;
+  border-width:2px;
 }
 
 /* Style the links inside the navigation bar */
@@ -18,17 +20,25 @@
 
 /* Change the color of links on hover */
 .navMenu a:hover {
-  background-color: #ddd;
+  background-color: #fb9a5d;
   color: black;
 }
 
 /* Add a color to the active/current link */
 .navMenu a.active {
-  background-color: #4CAF50;
+  background-color: #b53334;
   color: white;
 }
 
 /*style table*/
 table, th, td { /* format table border */
     border-style: solid;
+    border-width: 2px;
+}
+
+fieldset {
+    background-color: #fb9a5d;
+    border-style: inset;
+    border-color: black;
+    border-width: 4px;
 }
