--- a/resources.css
+++ b/resources.css
@@ -1,13 +1,13 @@
-/*CS290 Project*/
+/* CS290 Project Subpage3 */
 
-/* Add a black background color to the top navigation */
-.navMenu {
+/* give navMenu black background */
+div.navMenu {
   background-color: #333;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
-.navMenu a {
+/* give styles to links to other pages in navMenu */
+div.navMenu a {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -16,18 +16,19 @@
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
-.navMenu a:hover {
+/* make links orange on hover */
+div.navMenu a:hover {
   background-color: #fb9a5d;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.navMenu a.active {
+div.navMenu a.active {
   background-color: #b53334;
   color: white;
 }
 
+/* style scrollbox */
 div.resources {
     height: 215px;
     background-color: #fb9a5d;
@@ -36,10 +37,12 @@ div.resources {
     padding-bottom: 20px;
 }
 
+/* style margins */
 h1, h3, form {
     margin-left: 20px
 }
 
+/* style links in scrollbox */
 div.resources a{
     margin-left: 20px
 }
